--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -57,7 +57,7 @@ workflows:
       app_store_connect: codemagic
     environment:
       ios_signing:
-        distribution_type: development
+        distribution_type: app_store
         bundle_identifier: com.casinocompaniontracker
       flutter: stable
       xcode: latest
@@ -76,7 +76,7 @@ workflows:
           find . -name "Podfile" -execdir pod install \;
       - name: Flutter build ipa for development
         script: |
-          flutter build ipa --debug \
+          flutter build ipa --release \
             --build-name=1.0.0 \
             --build-number=1 \
             --export-options-plist=/Users/builder/export_options.plist
