--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+3
+version: 1.1.0+1
 
 environment:
   sdk: ^3.9.2
@@ -49,19 +49,20 @@ dependencies:
   
   # UI Utilities
   intl: ^0.19.0
-  uuid: ^4.5.1
   
   # Biometrics
   local_auth: ^2.3.0
   
-  # Notifications
-  flutter_local_notifications: ^18.0.1
-  
-  # WebView
-  flutter_inappwebview: ^6.1.5
-  
   # Utils
   collection: ^1.18.0
+
+  onesignal_flutter: ^5.3.4
+  appsflyer_sdk: ^6.14.3
+  flutter_inappwebview: ^6.1.5
+  http: ^1.2.2
+  app_tracking_transparency: ^2.0.6+1
+  advertising_id: ^2.7.1
+  uuid: ^4.2.1
 
 dev_dependencies:
   flutter_test:
