feat: Implement avatar selection and management in PremiumMoreScreen
- Added avatar selection functionality using ImagePicker.
- Integrated avatar display and update logic in PremiumMoreScreen.
- Updated UserPreferences model to include avatarPath.
- Created AvatarService for handling avatar image selection and storage.
- Added permissions for camera and storage in AndroidManifest.xml.
- Updated main.dart to navigate to AppCrashesLog instead of AppCrashesLogCheck.
- Updated pubspec.yaml to include image_picker and permission_handler dependencies.
- Refactored code for better readability and maintainability.

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -26,6 +26,10 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Please allow access to camera to take photo for a profile image.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Please allow access to your photo library to choose a profile picture.</string>
 	<key>NSUserTrackingUsageDescription</key>
 	<string>Help us improve by allowing anonymous usage tracking. Your privacy is always protected.</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
