--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.2.0+1
+version: 1.3.0+1
 
 environment:
   sdk: ^3.9.2
@@ -55,6 +55,10 @@ dependencies:
   
   # Utils
   collection: ^1.18.0
+  
+  # Image Picker
+  image_picker: ^1.0.7
+  permission_handler: ^11.3.0
 
   onesignal_flutter: ^5.3.4
   appsflyer_sdk: ^6.14.3
@@ -63,6 +67,8 @@ dependencies:
   app_tracking_transparency: ^2.0.6+1
   advertising_id: ^2.7.1
   uuid: ^4.2.1
+
+  app_settings: ^6.1.1
 
 dev_dependencies:
   flutter_test:
